<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.WorkoutDetailsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_title"
                android:imeOptions="actionDone" />

            <Button
                android:id="@+id/btn_activity_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_activity_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_place"
                android:imeOptions="actionDone" />

            <EditText
                android:id="@+id/et_activity_starttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_start_time" />

            <EditText
                android:id="@+id/et_activity_endtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_end_time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_activity_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_activity_individual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pri_medium"
                    android:text="@string/activity_individual"
                    tools:ignore="UsingOnClickInXml" />

                <RadioButton
                    android:id="@+id/rb_activity_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:buttonTint="@color/pri_medium"
                    android:text="@string/activity_group"
                    tools:ignore="UsingOnClickInXml" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/ll_activity_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_activity_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/but_save" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_activity_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_activity_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/but_update" />

                <Button
                    android:id="@+id/btn_activity_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/but_delete" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>